[project]
name = "superstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mlforecast>=1.0.2",
    "nbformat>=4.2.0",
    "numba>=0.63.1",
    "pandas<2.4",
    "plotly>=6.5.0",
    "window-ops>=0.0.15",
    "catboost>=1.2.5",
    "shap>=0.49.1",
]
